--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "filepond": "^4.30.4",
         "filepond-plugin-file-validate-type": "^1.2.8",
         "filepond-plugin-image-preview": "^4.6.11",
+        "gsap": "^3.12.2",
         "vue": "^3.3.4",
         "vue-filepond": "^7.0.3",
         "vue-router": "^4.2.2"
