--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0",
+        "vite": "^4.4.7",
         "vue": "^3.2.41"
     },
     "dependencies": {
@@ -28,6 +28,7 @@
         "filepond-plugin-file-validate-type": "^1.2.8",
         "filepond-plugin-image-preview": "^4.6.11",
         "gsap": "^3.12.2",
+        "three": "^0.154.0",
         "vue": "^3.3.4",
         "vue-filepond": "^7.0.3",
         "vue-router": "^4.2.2"
